--- a/.github/workflows/firebase_deploy.yaml
+++ b/.github/workflows/firebase_deploy.yaml
@@ -28,7 +28,7 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_LETS_WORK_HAPPY_MOMENTS }}'
           expires: 3d
-          projectId: lets-work-insurance
+          projectId: lets-work-happy-moments
           channelId: live
           # channelId: 'pr-${{ github.event.number }}-${{ github.event.pull_request.head.ref }}'
           # Preview için bu kodu kullanıyoruz
